Run helidon test via dedicated task